--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
     left: 0%;
     width: 20%;
     max-width: 350px;
+    font-weight: bold;
 }
 
 .hero-text-main {
@@ -30,7 +31,7 @@
 
 .hero-text-bottom {
     top: 90%;
-    color: white;
+    color: grey;
 }
 
 .hero-text-background {
