--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* The hero image */
 .hero-image {
     /* The image used */
-    background-image: url("../images/header_cropped.jpg");
+    background-image: url("../images/header2.jpg");
 
     /* Set a specific height */
     height: 450px;
